--- a/backend/.docker/apache/docker.apache.conf
+++ b/backend/.docker/apache/docker.apache.conf
@@ -8,7 +8,7 @@ LoadModule rewrite_module modules/mod_rewrite.so
 
 <VirtualHost *:80>
     # Proxy .php requests to port 9000 of the php-fpm container
-    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://decision_maker_php:9000/var/www/html/public/$1
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://technology_decision_tool_php:9000/var/www/html/public/$1
     DocumentRoot /var/www/html/public
     <Directory /var/www/html/public>
         DirectoryIndex index.php
